Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1403568: patch for incorrect links in minical.php output
 - Fixed bug 1421829: Next month skips a month
 - Renamed php-dbi.php to dbi4php.php since the name "PHPDBI" is already
   in use on sourceforge.
 - Added 'Custom Script' tab to pref.php
 - Fixed bug 1418725: Change of User Template changes System Template instead
 - Made "My event text" color an option instead of always using green
 - Fixed bug 1418717: user-app-*.php does not show public access calendar (w soln)
 - Fixed bug 1419183: Wrong login links with user-app-joomla.php
 - Fixed bug 1420458: Percentage completion of tasks: one is set to all
 - Fixed bug 1402930: Adding repeating event yields SQL error
 - Added tabs to pref.php
 - Removed admin_handler.php and pref_handler.php
 - Fixed bug 1416212: admin_handler gives invalid admin settings name
 - Fixed bug 1416850: reject email sometimes get incorrect time
 - Fixed bug 1415709: Location is missing in report.php
 - Fixed bug 1415717: Location doesn't show in view_entry.php (sometimes)
 - Fixed bug 1415256: pop up 'invalid login' not properly displayed
 - Fixed bug 1413308: can't set sane end date on recurring events  
 - Fixed bug 1413743: multi-byte's mail broken
 - New Joomla user authentication file (user-app-joomla.php)
 - Updated Timezone definitions to version 2005r to reflect change in DST
   in the US in 2007
 - Fixed bug 1411628: links to some repeating entries off by a year
 - Fixed bug 1412351: SQL error when saving repeated entry
 - Added ics atachments to external remindes, removed URL
 - Fixed bug 1407891: patch for bugs in send_reminders.php
 - Fixed bug 1411778: send_reminders.php sends a reminder every time it is run
 - Implemented magic_quote independance patch
 - Applied bug patch 1410478: patch for bugs in get_OverLap
 - Fixed bug 1410828: Save w/ Conflicts not working in v1.1
 - Fixed bug 1410487: ical export generates wrong escape sequences