@@ -76,6 +76,12 @@ function showPreview() {
   var previewWindow = window.open(url,"Preview","resizable=yes,scrollbars=yes");
 }
 
+function setTab( tab ) {
+  document.forms['prefform'].currenttab.value = tab;
+  showTab(tab);
+  return false;
+}
+
 <?php //see the showTab function in includes/js/visible.php for common code shared by all pages
  //using the tabbed GUI.
 ?>var tabs = new Array();
